<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_ecual">=</string>
    <string name="_dif">/</string>
    <string name="_mult">*</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_info_field">Информационное поле</string>
    <string name="_enter_field">Поле ввода</string>
    <string name="info">info</string>
    <string name="result">Результат</string>
    <string name="res">res</string>

    <!--Стринги для панели настроек-->
    <string name="AppName">Приложение</string>
    <string name="AppVersion">Версия</string>
    <string name="AppStyle">Стиль</string>
    <string name="AppLeng">Язык</string>
    <string name="NoName">No</string>
    <string name="Apply">Применить</string>

    <string-array name="Langs">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>

    <string-array name="Styles">
        <item>Светлый</item>
        <item>Тёмный</item>
    </string-array>

    <!--Перечисление тем-->
    <string name="Light">Light</string>
    <string name="Dark">Dark</string>


</resources>