<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.tabs.TabLayout.TabView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_AppNameDescr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/AppName" />

            <TextView
                android:id="@+id/textView_AppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView_AppVersionDescr"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="@string/AppVersion" />

            <TextView
                android:id="@+id/textView_AppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView_StyleDescr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AppStyle" />

            <TextView
                android:id="@+id/textView_Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView_LengDescr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AppLeng" />

            <TextView
                android:id="@+id/textView_Leng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </TableRow>

    </TableLayout>
</com.google.android.material.tabs.TabLayout.TabView>